# av_player

./: .gitignore  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.github/: cspell.json  dependabot.yaml
.github/workflows/: av_player.yaml  av_player_android.yaml  av_player_ios.yaml  av_player_linux.yaml  av_player_macos.yaml  av_player_web.yaml  (+4 more)
av_player/: .pubignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
av_player_android/: CHANGELOG.md  README.md  pubspec.yaml
av_player_ios/: CHANGELOG.md  README.md  pubspec.yaml
av_player_linux/: CHANGELOG.md  README.md  pubspec.yaml
av_player_macos/: README.md  pubspec.yaml
av_player_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
av_player_web/: README.md  pubspec.yaml
av_player_windows/: README.md  pubspec.yaml
example/: pubspec.yaml
ios/: av_player.podspec
lib/: av_player.dart  av_video_player.dart
linux/: CMakeLists.txt  av_player_linux_plugin.cc  messages.g.cc  messages.g.h
macos/: av_player.podspec
pigeons/: messages.dart
plans/: API_REFERENCE.md  API_REFERENCE_2.md  ROADMAP.md
test/: av_controls_test.dart  av_gestures_test.dart  av_pip_overlay_test.dart  av_player_test.dart  av_subtitle_overlay_test.dart  av_video_player_test.dart  subtitle_parser_test.dart
windows/: CMakeLists.txt  av_player_windows_plugin.cpp  event_channel_handler.cpp  event_channel_handler.h  media_player.cpp  media_player.h  messages.g.cpp  messages.g.h  smtc_handler.cpp  smtc_handler.h
(+136 files in other folders)
